--- a/CreateDB.ipynb
+++ b/CreateDB.ipynb
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c399067160>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c803c3d0>"
       ]
      },
      "execution_count": 13,
@@ -309,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c39914fb50>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c804ff40>"
       ]
      },
      "execution_count": 14,
@@ -944,7 +944,7 @@
    "outputs": [],
    "source": [
     "consumption_df.rename(columns={'ISO3166_numeric':'country_id','Country':'country','Year':'year',\n",
-    "                              'Var':'fuel_type','Value':'exajoules'},inplace=True)"
+    "                              'Var':'fuel_type','Value':'consumption_value'},inplace=True)"
    ]
   },
   {
@@ -979,7 +979,7 @@
        "      <th>year</th>\n",
        "      <th>year_range</th>\n",
        "      <th>fuel_type</th>\n",
-       "      <th>exajoules</th>\n",
+       "      <th>consumption_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1033,12 +1033,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   country_id  country  year year_range   fuel_type  exajoules\n",
-       "0        12.0  Algeria  1965  1965-1975  oilcons_ej   0.055459\n",
-       "1        12.0  Algeria  1966  1965-1975  oilcons_ej   0.072982\n",
-       "2        12.0  Algeria  1967  1965-1975  oilcons_ej   0.068191\n",
-       "3        12.0  Algeria  1968  1965-1975  oilcons_ej   0.072602\n",
-       "4        12.0  Algeria  1969  1965-1975  oilcons_ej   0.076701"
+       "   country_id  country  year year_range   fuel_type  consumption_value\n",
+       "0        12.0  Algeria  1965  1965-1975  oilcons_ej           0.055459\n",
+       "1        12.0  Algeria  1966  1965-1975  oilcons_ej           0.072982\n",
+       "2        12.0  Algeria  1967  1965-1975  oilcons_ej           0.068191\n",
+       "3        12.0  Algeria  1968  1965-1975  oilcons_ej           0.072602\n",
+       "4        12.0  Algeria  1969  1965-1975  oilcons_ej           0.076701"
       ]
      },
      "execution_count": 33,
@@ -1059,7 +1059,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c3991ca220>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c807ea60>"
       ]
      },
      "execution_count": 34,
@@ -1081,7 +1081,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c399016e20>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c7f10310>"
       ]
      },
      "execution_count": 35,
@@ -1092,7 +1092,7 @@
    "source": [
     "#Create table if it does not exist\n",
     "engine.execute('CREATE TABLE IF NOT EXISTS FUEL_CONSUMPTION(COUNTRY_ID INT,COUNTRY VARCHAR(25),YEAR INT,YEAR_RANGE VARCHAR(12),\\\n",
-    "              FUEL_TYPE VARCHAR(20),EXAJOULES DOUBLE PRECISION)')"
+    "              FUEL_TYPE VARCHAR(20),CONSUMPTION_VALUE DOUBLE PRECISION)')"
    ]
   },
   {
@@ -1967,7 +1967,7 @@
    "source": [
     "production_df=production_df[['ISO3166_numeric','Country','Year','year_range','Var','Value']]\n",
     "production_df.rename(columns={'ISO3166_numeric':'country_id','Country':'country','Year':'year',\n",
-    "                              'Var':'fuel_type','Value':'exajoules'},inplace=True)"
+    "                              'Var':'fuel_type','Value':'production_value'},inplace=True)"
    ]
   },
   {
@@ -1979,7 +1979,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c399214f40>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c80fb730>"
       ]
      },
      "execution_count": 53,
@@ -2001,7 +2001,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c39920c8e0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c80fb5e0>"
       ]
      },
      "execution_count": 54,
@@ -2012,7 +2012,7 @@
    "source": [
     "#Create table if it does not exist\n",
     "engine.execute('CREATE TABLE IF NOT EXISTS FUEL_PRODUCTION(COUNTRY_ID INT,COUNTRY VARCHAR(25),YEAR INT,YEAR_RANGE VARCHAR(12),\\\n",
-    "              FUEL_TYPE VARCHAR(20),EXAJOULES DOUBLE PRECISION)')"
+    "              FUEL_TYPE VARCHAR(20),PRODUCTION_VALUE DOUBLE PRECISION)')"
    ]
   },
   {
@@ -2234,8 +2234,7 @@
        "      <th>country</th>\n",
        "      <th>year</th>\n",
        "      <th>year_range</th>\n",
-       "      <th>fuel_type</th>\n",
-       "      <th>metricton</th>\n",
+       "      <th>emission_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2245,7 +2244,6 @@
        "      <td>Algeria</td>\n",
        "      <td>1965</td>\n",
        "      <td>1965-1975</td>\n",
-       "      <td>co2_mtco2</td>\n",
        "      <td>5.568753</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2254,7 +2252,6 @@
        "      <td>Algeria</td>\n",
        "      <td>1966</td>\n",
        "      <td>1965-1975</td>\n",
-       "      <td>co2_mtco2</td>\n",
        "      <td>6.867506</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2263,7 +2260,6 @@
        "      <td>Algeria</td>\n",
        "      <td>1967</td>\n",
        "      <td>1965-1975</td>\n",
-       "      <td>co2_mtco2</td>\n",
        "      <td>6.369307</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2272,7 +2268,6 @@
        "      <td>Algeria</td>\n",
        "      <td>1968</td>\n",
        "      <td>1965-1975</td>\n",
-       "      <td>co2_mtco2</td>\n",
        "      <td>6.771137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2281,7 +2276,6 @@
        "      <td>Algeria</td>\n",
        "      <td>1969</td>\n",
        "      <td>1965-1975</td>\n",
-       "      <td>co2_mtco2</td>\n",
        "      <td>7.592118</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2289,12 +2283,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   country_id  country  year year_range  fuel_type  metricton\n",
-       "0        12.0  Algeria  1965  1965-1975  co2_mtco2   5.568753\n",
-       "1        12.0  Algeria  1966  1965-1975  co2_mtco2   6.867506\n",
-       "2        12.0  Algeria  1967  1965-1975  co2_mtco2   6.369307\n",
-       "3        12.0  Algeria  1968  1965-1975  co2_mtco2   6.771137\n",
-       "4        12.0  Algeria  1969  1965-1975  co2_mtco2   7.592118"
+       "   country_id  country  year year_range  emission_value\n",
+       "0        12.0  Algeria  1965  1965-1975        5.568753\n",
+       "1        12.0  Algeria  1966  1965-1975        6.867506\n",
+       "2        12.0  Algeria  1967  1965-1975        6.369307\n",
+       "3        12.0  Algeria  1968  1965-1975        6.771137\n",
+       "4        12.0  Algeria  1969  1965-1975        7.592118"
       ]
      },
      "execution_count": 59,
@@ -2304,9 +2298,9 @@
    ],
    "source": [
     "#Select needed columns and rename them as needed\n",
-    "co2emission_df=co2emission_df[['ISO3166_numeric','Country','Year','year_range','Var','Value']]\n",
+    "co2emission_df=co2emission_df[['ISO3166_numeric','Country','Year','year_range','Value']]\n",
     "co2emission_df.rename(columns={'ISO3166_numeric':'country_id','Country':'country','Year':'year',\n",
-    "                              'Var':'fuel_type','Value':'metricton'},inplace=True)\n",
+    "                              'Value':'emission_value'},inplace=True)\n",
     "co2emission_df.head()"
    ]
   },
@@ -2319,7 +2313,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c39928b850>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c80f67f0>"
       ]
      },
      "execution_count": 60,
@@ -2340,7 +2334,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c399208d90>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c90f1d60>"
       ]
      },
      "execution_count": 61,
@@ -2351,7 +2345,7 @@
    "source": [
     "#Create table if it does not exist\n",
     "engine.execute('CREATE TABLE IF NOT EXISTS CO2_EMISSION(COUNTRY_ID INT,COUNTRY VARCHAR(25),YEAR INT,YEAR_RANGE VARCHAR(12),\\\n",
-    "              FUEL_TYPE VARCHAR(20),METRICTON DOUBLE PRECISION)')"
+    "              EMISSION_VALUE DOUBLE PRECISION)')"
    ]
   },
   {
@@ -3643,7 +3637,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c399bf1c40>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c8b73910>"
       ]
      },
      "execution_count": 80,
@@ -3665,7 +3659,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2c3d6bb39d0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1d18591d340>"
       ]
      },
      "execution_count": 81,
