--- a/CreateDB.ipynb
+++ b/CreateDB.ipynb
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c803c3d0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa87796580>"
       ]
      },
      "execution_count": 13,
@@ -309,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c804ff40>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa8771ff40>"
       ]
      },
      "execution_count": 14,
@@ -1059,7 +1059,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c807ea60>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa878cbca0>"
       ]
      },
      "execution_count": 34,
@@ -1081,7 +1081,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c7f10310>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa878b1670>"
       ]
      },
      "execution_count": 35,
@@ -1979,7 +1979,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c80fb730>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa84fe1670>"
       ]
      },
      "execution_count": 53,
@@ -2001,7 +2001,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c80fb5e0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa877a11c0>"
       ]
      },
      "execution_count": 54,
@@ -2313,7 +2313,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c80f67f0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa859dad00>"
       ]
      },
      "execution_count": 60,
@@ -2334,7 +2334,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c90f1d60>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa8791dc10>"
       ]
      },
      "execution_count": 61,
@@ -3637,7 +3637,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1c8b73910>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa87924bb0>"
       ]
      },
      "execution_count": 80,
@@ -3659,7 +3659,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d18591d340>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x2aa88421550>"
       ]
      },
      "execution_count": 81,
@@ -3708,7 +3708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
