add clarifying comment

--- a/CreateDB.ipynb
+++ b/CreateDB.ipynb
@@ -684,6 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# make sure there are no chained assignments\n",
     "pd.set_option('mode.chained_assignment',None)"
    ]
   },
@@ -694,7 +695,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Create a Range of years for every decade\n",
+    "## Create a Range of years for every decade\n",
     "consumption_df['year_range']=[\"1965-1975\" if x<1975 else \"1975-1985\" if x<1985 \n",
     "                              else \"1985-1995\" if x<1995 else \"1995-2005\" if x<2005 \n",
     "                              else \"2005-2015\" if x<2015 else \"2015-2020\" for x in consumption_df['Year'] ]"
@@ -2857,7 +2858,7 @@
     }
    ],
    "source": [
-    "#Unique Country Names in GDP Data\n",
+    "# Unique Country Names in GDP Data\n",
     "gdp['Country Code'].nunique()"
    ]
   },
@@ -3062,8 +3063,8 @@
     }
    ],
    "source": [
-    "# Merge gdp dand country data(from BP) and get country ID.\n",
-    "#Get GPD pnly for those countries that exist in BP data set\n",
+    "# Merge gdp data and country data(from BP) and get country ID.\n",
+    "# Get GPD only for those countries that exist in BP data set\n",
     "final_gdp=gdp.merge(country_code,how='inner',left_on='Country Code',right_on='ISO3166_alpha3')\n",
     "final_gdp.head()"
    ]
@@ -3708,7 +3709,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
