Add explanatory cell to top of db_mover.ipynb

--- a/db_mover.ipynb
+++ b/db_mover.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "05c3072e",
+   "metadata": {},
+   "source": [
+    "# db_mover.ipynb\n",
+    "This Jupyter Notebook will copy the PostgreSQL DB co2emission_db and all its tables to a local sqlite DB called fossil_fuel_db.sqlite"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "f48d952d",
